@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-22T16:12:25Z",
-  "count_outdated" : 408,
-  "uniques_outdated" : 25,
+  "timestamp" : "2022-06-24T08:11:48Z",
+  "count_outdated" : 410,
+  "uniques_outdated" : 26,
   "count" : 424,
   "uniques" : 30,
   "views" : [
-    {
-      "timestamp": "2022-06-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 6,
