@@ -1,3 +1,10 @@
+2022-06-24T08:11:48Z:
+* notice: last 14d: unq all: 1 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 25 408 / 30 424
+* notice: next accum: outdated-unq outdated-all / unq all: 26 410 / 30 424
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-06-10] / []
+
 2022-06-22T16:12:25Z:
 * notice: last 14d: unq all: 1 16
 * notice: prev accum: outdated-unq outdated-all / unq all: 24 407 / 30 424
